tests/ui/concurrent_cached_sync_writes_attr_unsupported.rs
use cached::macros::concurrent_cached;

#[concurrent_cached(sync_writes = true)]
fn load(id: u64) -> u64 {
    id
}

fn main() {}
